# seda

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test-suite.yml  test-templates.yml
scripts/: check  test
seda/: __init__.py  __main__.py  app.py  client.py  config.py  decorators.py  exceptions.py  logging.py  policies.py  run.py  session.py  tasks.py  types.py  utils.py
seda/cli/: __init__.py  callbacks.py  cmd.py  deploy.py  main.py  options.py  remove.py
templates/django/: README.md  manage.py  pyproject.toml  serverless.yml
templates/django/app/config/: __init__.py  asgi.py  seda.py  settings.py  urls.py  wsgi.py
templates/django/app/myapp/: tasks.py  urls.py  views.py
templates/django/app/myapp/tests/: test_views.py
templates/django/scripts/: start  test
templates/falcon/: README.md  pyproject.toml  serverless.yml
templates/falcon/app/: main.py
templates/falcon/app/api/: resources.py
templates/falcon/app/tests/: conftest.py
templates/falcon/app/tests/api/: test_resources.py
templates/falcon/scripts/: test
templates/fastapi/: README.md  pyproject.toml  serverless.yml
templates/fastapi/app/: main.py  settings.py
templates/fastapi/app/api/: __init__.py  endpoints.py
templates/fastapi/app/tests/: conftest.py
templates/fastapi/app/tests/api/: test_endpoints.py
templates/starlette/: README.md  pyproject.toml  serverless.yml
templates/starlette/app/: main.py
templates/starlette/app/api/: __init__.py  endpoints.py
templates/starlette/app/tests/: conftest.py
templates/starlette/app/tests/api/: test_endpoints.py
templates/starlette/scripts/: check  start
templates/vanilla/: README.md  package.json  pyproject.toml  serverless.yml
templates/vanilla/app/: main.py  tasks.py
templates/vanilla/app/tests/: test_main.py  test_tasks.py
tests/: test_client.py
