[build-system]
requires = ["poetry"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "template"
description = ""
version = "0.1.0"
authors = ["me"]

[tool.poetry.dependencies]
python = "^3.9"
seda = {extras = ["asgi"], version = "*"}
django = "^4.0.0"

[tool.poetry.group.dev.dependencies]
autoflake = "*"
black = "*"
flake8 = "*"
isort = "*"
mypy = "*"
pytest = "*"
pytest-cov = "*"
pytest-django = "*"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "app.config.settings"

[tool.isort]
profile = "black"
known_third_party = ["django"]

[tool.mypy]
ignore_missing_imports = true
