[build-system]
requires = ["poetry"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "fastapi-template"
description = ""
version = "0.1.0"
authors = ["me"]

[tool.poetry.dependencies]
python = "^3.9"
seda = {extras = ["asgi"], version = "*"}

fastapi = "^0.88.0"
httpx = "*"

[tool.poetry.group.dev.dependencies]
autoflake = "*"
black = "*"
flake8 = "*"
isort = "*"
mypy = "*"
pytest = "*"
pytest-cov = "*"
uvicorn = "*"

[tool.isort]
profile = "black"
known_third_party = ["fastapi"]

[tool.mypy]
disallow_untyped_defs = true
ignore_missing_imports = true
